--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@types/jest": "^26.0.3",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
     "@types/yup": "^0.29.3",
