--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
     "expo": "~38.0.1",
+    "expo-document-picker": "^8.2.1",
     "expo-status-bar": "^1.0.0",
     "formik": "^2.1.4",
     "react": "~16.11.0",
