--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
     "expo": "~38.0.1",
+    "expo-constants": "^9.1.1",
     "expo-document-picker": "^8.2.1",
+    "expo-file-system": "^9.0.1",
     "expo-status-bar": "^1.0.0",
     "formik": "^2.1.4",
     "react": "~16.11.0",
@@ -32,6 +34,8 @@
     "react-native-safe-area-context": "3.0.2",
     "react-native-screens": "~2.9.0",
     "react-native-web": "~0.11.7",
+    "react-native-webview": "^10.3.2",
+    "rn-pdf-reader-js": "^3.1.0",
     "yup": "^0.29.1"
   },
   "devDependencies": {
