--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-file-system": "^9.0.1",
     "expo-status-bar": "^1.0.0",
     "formik": "^2.1.4",
+    "moment": "^2.27.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
